<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/default_20dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewHeroName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_40dp"
            android:layout_marginTop="@dimen/default_60dp"
            android:text="@string/hero_name"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewHeroDescription"
            android:layout_width="@dimen/default_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_20dp"
            android:layout_marginEnd="@dimen/default_40dp"
            android:text="@string/lorem_ipsum"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textViewHeroName"
            app:layout_constraintTop_toBottomOf="@+id/textViewHeroName" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewHeroComics"
            android:layout_width="@dimen/default_0dp"
            android:layout_height="@dimen/default_300dp"
            android:layout_marginStart="@dimen/default_20dp"
            android:layout_marginTop="@dimen/default_20dp"
            android:layout_marginEnd="@dimen/default_20dp"
            android:layout_marginBottom="@dimen/default_20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_40dp"
            android:text="@string/bottomsheet_hero_details_title"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textViewHeroDescription"
            app:layout_constraintTop_toBottomOf="@+id/textViewHeroDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>