<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_margin="@dimen/default_20dp"
        app:cardCornerRadius="@dimen/default_10dp"
        android:layout_width="@dimen/default_300dp"
        android:layout_height="@dimen/default_300dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView3"
                android:layout_width="@dimen/default_70dp"
                android:layout_height="@dimen/default_70dp"
                android:layout_marginTop="@dimen/default_50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="false"
                app:lottie_rawRes="@raw/lottie_error" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="@dimen/default_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_40dp"
                android:layout_marginEnd="@dimen/default_40dp"
                android:gravity="center"
                android:text="@string/error_description"
                android:textSize="@dimen/default_text_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_10dp"
                android:text="@string/error_title"
                android:textColor="@color/black"
                android:textSize="@dimen/default_text_20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/animationView3" />

            <Button
                android:id="@+id/buttonTryAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/try_again"
                android:textAllCaps="false"
                android:textSize="@dimen/default_text_12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>